feat: update component styles for improved responsiveness and readability; adjust payment terms in translation

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -348,7 +348,7 @@
   "pricing": {
     "label": "Investissement",
     "title": "Un prix clair. Des résultats concrets.",
-    "paymentTerms": "200€ au démarrage — 200€ à la livraison. Pas d'abonnement. Pas de surprise.",
+    "paymentTerms": "Paiement à la livraison",
     "flipHint": "Survolez pour voir les détails",
     "flipBack": "Survolez pour revenir",
     "common": {
